--- a/slide2.html
+++ b/slide2.html
@@ -63,9 +63,9 @@
     /* border: 2px solid red; */
     width: 250px;
     height: 250px;
-    margin-left: auto;
+    margin-left: 100px;
     margin-right: auto;
-    margin-top: 45px;
+    margin-top: 50px;
 }
 
 .div-buttons {
