--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@ button:hover{
         }
 
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BS221EY1YB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BS221EY1YB');
+</script>
 </head>
 <body>
     <div class="hbd">
