--- a/index.html
+++ b/index.html
@@ -215,6 +215,39 @@ button:hover{
     
 </head>
 <body>
+
+
+    <!-- Custom popup modal -->
+<div id="customPopup" style="
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    font-family: 'Poppins', sans-serif;
+    justify-content: center; align-items: center;
+">
+    <div style="
+        background: white;
+        padding: 20px 30px;
+        border-radius: 15px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        text-align: center;
+        max-width: 300px;
+    ">
+        <h3 style="margin: 0; color: #e100ff;">I am still Waiting for you!</h3>
+        <button onclick="closePopup()" style="
+            margin-top: 20px;
+            padding: 8px 16px;
+            background: #7f00ff;
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        ">OK</button>
+    </div>
+</div>
+
     <div class="hbd">
         <h1 id="Happy-bdy-b">Happy Birth Day</h1>
         <p id="B" style="color: white;">Compiler</p>
@@ -244,6 +277,16 @@ button:hover{
         function pinky() {
             document.getElementById('B').textContent = 'Bhavani';
         }
+
+        // Show popup after 3 seconds
+setTimeout(() => {
+    document.getElementById('customPopup').style.display = 'flex';
+}, 1000);
+
+function closePopup() {
+    document.getElementById('customPopup').style.display = 'none';
+}
+
     </script>
 </body>
 </html>
